--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -11,19 +11,17 @@
     <body>
         <h1>Rango says...</h1>
         <div>
-            hey there partner! <br/>
-            <strong>{{ boldmessage }}</strong>
+            hey there partner! <br />
+            <strong>{{ boldmessage }}</strong><br />
         </div>
 
         <div>
-        {% if categories %}
             <h2>Most Liked Categories</h2>
+        {% if categories %}
             <ul>
-                {% for category in categories %}
-                <li>
-                    <a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a>
-                </li>
-                {% endfor %}
+            {% for category in categories %}
+                <li><a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
+            {% endfor %}
             </ul>
         {% else %}
             <strong>There are no categories present.</strong>
@@ -31,12 +29,12 @@
         </div>
 
         <div>
-        {% if pages %}
             <h2>Most Viewed Pages</h2>
+        {% if pages %}
             <ul>
-                {% for page in pages %}
+            {% for page in pages %}
                 <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                {% endfor %}
+            {% endfor %}
             </ul>
         {% else %}
             <strong>There are no pages present.</strong>
@@ -44,8 +42,9 @@
         </div>
 
         <div>
-            <a href="/rango/about/">About Rango</a><br />
-            <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+            <a href="/rango/about/">About</a><br />
+            <a href="/rango/add_category/">Add a New Category</a><br />
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
         </div>
     </body>
 
